# Blaze

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
assets/blaze/shaders/: imgui.vert
assets/sandbox/materials/: gfx.material  texture.material
assets/sandbox/shaders/: gfx.frag  gfx.vert  texture.frag
blaze/: CMakeLists.txt  README.md
blaze/assets/materials/: imgui.material
blaze/assets/shaders/: imgui.frag
blaze/internal/: VulkanCommandBuffer.hpp  VulkanGfxDevice.cpp  VulkanGfxDevice.hpp  VulkanGraphicsBuffer.hpp  VulkanMaterial.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.hpp
blaze/src/: Blaze.cpp  Blaze.hpp  BlazeInstance.cpp  BlazeInstance.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Delegate.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Display.cpp  Display.hpp  Graphics.cpp  Graphics.hpp  GraphicsBuffer.cpp  GraphicsBuffer.hpp  GraphicsFence.cpp  GraphicsFence.hpp  Input.cpp  Input.hpp  Iter.hpp  Json.cpp  Json.hpp  Material.cpp  Material.hpp  Mesh.hpp  RenderPipeline.cpp  RenderPipeline.hpp  Resource.hpp  Resources.cpp  Resources.hpp  Screen.cpp  Screen.hpp  SharedLibrary.cpp  SharedLibrary.hpp  Signal.hpp  Texture.cpp  Texture.hpp  TextureData.hpp  (+8 more)
blaze/src/util/: internal_ptr.hpp  match.hpp
blaze/src/vulkan/: vk_mem_alloc.cpp
sandbox/: CMakeLists.txt
sandbox/assets/materials/: texture.material  triangle.material
sandbox/assets/shaders/: texture.frag  texture.vert
sandbox/src/: main.cpp
